# fusion-center

./: .env.example  .gitignore  README.md  add_error_handler.py  algorithm.md  example_dual_llm_usage.py  pyproject.toml  test_dual_llm.py  test_e2e_dual_llm.py  test_node_execution.py  update_execute_calls.py
docs/: CORRELATION_ENGINE_DESIGN.md
scripts/: telegram_auth.py  test_mcp_tools.py
src/: __init__.py
src/agent/: __init__.py  __main__.py  core.py  graph.py  nodes.py  schemas.py  state.py  tools.py
src/agent/nodes/: __init__.py  analysis.py  base.py  correlation.py  decomposition.py  gathering.py  hypothesis.py  planning.py  reflection.py  router.py  synthesis.py  verification.py
src/agent/prompts/: __init__.py
src/agent_v2/: README.md  __init__.py  __main__.py  agent.py  config.py  debug.py  phases.py  prompts.py  schemas.py  session.py  state.py  websocket.py
src/correlation_engine/: README.md  __init__.py  alerts.py  collector.py  config.py  notifications.py  patterns.py  rules.py  schemas.py  server.py  storage.py
src/dashboard/: README.md  __init__.py  api.py  server.py
src/dashboard/static/: agent-brain.js  correlation-engine.html  correlation-engine.js  index.html  style.css
src/mcp_server/: __init__.py  server.py
src/mcp_server/tools/: __init__.py  cyber.py  geo.py  news.py  rss.py  sanctions.py  search.py  telegram.py  threat_intel.py
src/shared/: __init__.py  config.py  logger.py  output_writer.py
