[project]
name = "project-overwatch"
version = "0.1.0"
description = "Fusion Center - MCP Server and AI Agent for OSINT and Geopolitical Intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Project Overwatch Team" }
]
keywords = ["mcp", "osint", "geopolitics", "intelligence", "firms", "gdelt", "agent"]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "telethon>=1.36.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
agent = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
]

[project.scripts]
overwatch-server = "src.mcp_server.server:main"
overwatch-agent = "src.agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
